--- a/gaussian-quadrature.ipynb
+++ b/gaussian-quadrature.ipynb
@@ -9,9 +9,11 @@
     "#### Orthogonal polynomials\n",
     "\n",
     "Let ${p_m(x)}$ be a set of polynomials orthogonal over the interval $(a,b)$ with respect to the weight function $\\omega(x)>0$.  Orthogonality condition is given as\n",
+    "\n",
     "$\n",
     "\\int_a^b p_m(x)p_n(x)\\omega(x)dx = \\delta_{mn}\n",
     "$\n",
+    "\n",
     "Where $p_m(x)$ is an $m^{th}$ degree polynomial.\n",
     "\n",
     "#### Quadrature\n",
@@ -20,9 +22,7 @@
     "\\int_a^b\\omega(x)f(x) \\approx \\sum_i^N w_i f(x_i)\n",
     "$\n",
     "\n",
-    "Where $\\omega(x)$ is the weight function, $\\omega_i$ and $x_i$ are the weights and roots of the orthogonal polynomial.\n",
-    "\n",
-    "- If $f(x)$ is a polynomial of degree $\\leq 2N-1$, result of the quadrature will be exact.\n",
+    "Where $\\omega(x)$ is the weight function, $\\omega_i$ and $x_i$ are the weights and roots of the orthogonal polynomial. If $f(x)$ is a polynomial of degree $m$,  $m \\leq 2N-1$, result of the quadrature will be exact.\n",
     "\n",
     "#### Generalizations\n",
     "\n",
@@ -36,7 +36,7 @@
     "| Chebyshev |      $[-1,1]$      |      $(1-x^2)^{-0.5}$      |\n",
     "|  Jacobi   |      $[-1,1]$      | $(1-x)^\\alpha (1+x)^\\beta$ |\n",
     "\n",
-    "###### Python Pseudo code\n",
+    "### Python Pseudo code\n",
     "\n",
     "```python\n",
     "from numpy.polynomial.{name} import {name}gauss\n",
